# FYP

./: .gitignore  DevGuide.md  README.md  env_template.txt  package-lock.json  package.json
backend/: app.py  pyproject.toml  requirements.txt  server.py  settings.yaml
backend/Enums/: __init__.py  event_enum.py  request_enum.py  request_type.py  upper_str_enum.py
backend/api/auth/: __init__.py  auth_model.py  dependencies.py  jwt_setup.py  repositories.py  route.py  schemas.py  security.py  service.py
backend/auth/: __init__.py  auth_model.py  jwt.py  jwt_setup.py  route.py  security.py
backend/background/: celery_app.py  email.py
backend/background/tasks/: __init__.py  email.py
backend/common/: exception_handlers.py  exceptions.py
backend/common/enums/: __init__.py  event_enum.py  exception_enum.py  payload_enum.py  request_enum.py  upper_str_enum.py
backend/configs/: __init__.py  config.py  config_loader.py  logging_config.py
backend/core/: __init__.py  app.py  config.py  email.py
backend/custom/: custom_exception.py  custom_handler.py  types.py
backend/custom/custom_enums/: __init__.py  exception_enum.py  payload_enum.py
backend/custom/custom_type/: __init__.py  (+2 more)
backend/custom_type/: __init__.py  auth_type.py  logging_type.py
backend/database/: __init__.py  db.py  make_db.py  sql_db.py  sql_statement.py
backend/db/: __init__.py  db.py
backend/dependencies/: __init__.py  auth_dependencies.py
backend/middlewares/: __init__.py  logging_middleware.py  logging_types.py
backend/models/: users.py
backend/scripts/: db_operation.py
backend/utils/: __init__.py  jwt_setup.py  security.py
engine/: event.py  event_enum.py  event_queue.py  payloads.py  pyproject.toml  tasks.md
(+37 files in other folders)
